# oxytex

src/: oxytex.cpp
src/textdetect/: CMakeLists.txt  detect.cpp  detect.hpp
